--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended cm-super
 script:
-- pdflatex -interaction=nonstopmode -halt-on-error main.tex
+- pdflatex -interaction=nonstopmode -halt-on-error SemihOnay-CV.tex
 
 deploy:
 - provider: releases
