--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ script:
 deploy:
 - provider: releases
   api_key:
-    secure: $GITHUB_TOKEN
+    user: $USERNAME
+    password: $PASS
   file_glob: true
   file: "*.pdf"
   skip_cleanup: true
