--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ script:
 
 deploy:
 - provider: releases
-  api_key:GITHUB_TOKEN
-    secure: $
+  api_key:
+    secure: $GITHUB_TOKEN
   file_glob: true
   file: "*.pdf"
   skip_cleanup: true
