--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ script:
 - pdflatex -interaction=nonstopmode -halt-on-error SemihOnay-CV.tex
 
 deploy:
-- provider: releases
-  api_key:
-    secure: $GITHUB_TOKEN
+  provider: releases
+  api_key: $GITHUB_TOKEN
   file_glob: true
   file: "*.pdf"
   skip_cleanup: true
